[package]
name = "moldy_chip"
version = "0.1.0"
edition = "2021"
authors = ["Andrew De Stefano <313039+itsmeandrewd@users.noreply.github.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"