[package]
name = "moldy_chip"
version = "0.1.0"
edition = "2021"
authors = ["Andrew De Stefano <313039+itsmeandrewd@users.noreply.github.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3"
log = "0.4"
console_log = "0.2"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
    'Window',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'WebGlRenderingContext'
]